@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.496 2006/01/03 14:55:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.497 2006/01/04 19:51:03 wolf31o2 Exp $
+
+  04 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-controller.sh:
+  Added patch from vapier for bug #117254.
 
   03 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
   arch/amd64.py, arch/mips.py, arch/ppc.py, arch/ppc64.py, arch/s390.py,
